infra/app/4_app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-api-deployment
  namespace: fastfood-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastfood-api
  template:
    metadata:
      labels:
        app: fastfood-api
    spec:
      serviceAccountName: fastfood-api-sa # IMPORTANTE: Service Account para autenticação com AWS
      containers:
        - name: fastfood-api
          image: 239409137076.dkr.ecr.us-east-1.amazonaws.com/develop:a9816549d2425f49743de8f0a9736bef3105b0ea
          #image: hmouraf/fastfood:tech_fase2
          #image: hmouraf/soat-tech-challenge-fast-food-app:feature-build
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "800Mi" # Mínimo de memória garantida
              cpu: "250m"      # Mínimo de CPU garantida (0.25 cores)
            limits:
              memory: "1G" # Máximo de memória que o container pode usar
              cpu: "512m"      # Máximo de CPU que o container pode usar (0.5 cores)
          livenessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 60

          readinessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 60
---
