infra/app/5_app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-api-service
  namespace: fastfood-app
spec:
  selector:
    app: fastfood-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
